--- a/Practical Exam/index.html
+++ b/Practical Exam/index.html
@@ -16,7 +16,7 @@
   margin: 10px;
   float: left;
   margin-left: 60px;
-  border: 1px solid #ccc;
+  border: 1px solid rgb(62, 61, 61);
   border-radius: 10px;
   overflow: hidden;
   background-color: #22232B;
@@ -109,8 +109,8 @@ body{
 
         <div id="card-container"></div>
 
-      <div class="footer container w-100">
-          <div class="row container">
+      <div class="footer  ">
+          <div class="row container ">
             <div class="col col-6 col-lg-3">
               <p>Men</p>
               <p>Women</p>
